[gd_scene load_steps=2 format=3 uid="uid://covhtwpdhkhb3"]

[ext_resource type="Script" uid="uid://c4o1ksflp4wvr" path="res://Scripts/profile_view.gd" id="1"]

[node name="ProfileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MainLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NavigationBar" type="HBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="MarginContainer/MainLayout/NavigationBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "‚Üê Back"

[node name="Spacer" type="Control" parent="MarginContainer/MainLayout/NavigationBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="MarginContainer/MainLayout/NavigationBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Edit Profile"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ContentLayout" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="HeaderSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="AvatarPanel" type="PanelContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox"]
layout_mode = 2

[node name="ProfileAvatar" type="TextureRect" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox/AvatarPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProfileName" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Player Name"

[node name="ProfileBio" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox/InfoVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "No bio set"
autowrap_mode = 3

[node name="Spacer" type="Control" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox/InfoVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LevelIndicatorContainer" type="Control" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/HeaderSection/HeaderHBox/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Divider1" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="StatsSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatsHeader" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Statistics"

[node name="StatsContainer" type="GridContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 3

[node name="Divider2" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="AchievementsSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AchievementsHeaderHBox" type="HBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection"]
layout_mode = 2

[node name="AchievementsHeader" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection/AchievementsHeaderHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Achievements"

[node name="Spacer" type="Control" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection/AchievementsHeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AchievementProgress" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection/AchievementsHeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "0 / 0 Unlocked (0.0%)"

[node name="AchievementsScroll" type="ScrollContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
follow_focus = true

[node name="AchievementsGrid" type="GridContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AchievementsSection/AchievementsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2
